# nn-zero-to-hero

./: 2_makemore_mlp.ipynb  3_makemore_bn.ipynb  README.md  pyproject.toml
notebooks/: 1_makemore_bigrams.ipynb  2_makemore_mlp.ipynb  3_makemore_bn.ipynb  4_makemore_backprop.ipynb  5_makemore_cnn.ipynb  build_makemore_yay.ipynb  micrograd_from_scratch.ipynb.ipynb
notebooks/data/: house_tiny.csv
